--- a/public/less/login.less
+++ b/public/less/login.less
@@ -144,6 +144,40 @@ css for login form
 /*
 css for sorrow
  */
+@-webkit-keyframes sorrow {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+  90% {
+    -webkit-transform: scale(0.8);
+    transform: scale(0.8);
+    opacity: 0.5;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+@keyframes sorrow {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+  90% {
+    -webkit-transform: scale(0.8);
+    transform: scale(0.8);
+    opacity: 0.5;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+}
 .login_sorrow{
 	width: 10%;
 	height: 20%;
@@ -152,6 +186,8 @@ css for sorrow
 	transform:rotate(-15deg);
 	top: 40%;
 	left: 35%;
+	-webkit-animation: sorrow 0s 1 3s forwards;
+  	animation: sorrow 0s 1 3s forwards;
 	img{
 		width: 100%;
 		height: 100%;
