--- a/public/less/index.less
+++ b/public/less/index.less
@@ -1,6 +1,18 @@
+@import './lib/common.less';
+
 @color_green:#15adbc;
 @color_pink:#F3C9DD;
 @color_pink_deep:#f47fb5;
+@color_gray:#D8D8D8;
+.border(@b:0px){
+	border:@b solid #000; 
+}
+.line(@l:100%){
+	border-collapse: collapse;
+	background-color: @color_gray;
+	width: @l;
+	height: 0.4rem;
+}
 
 html,body{
 	width: 100%;
@@ -8,92 +20,191 @@ html,body{
 	font-size:10px;
 }
 .container{
+	width: 100%;
 	background-color: @color_green;
-	width: 80%;
-	margin: 0 auto;
 }
-.index_guide{
-	width: 70%;
-	height: 10rem;
-	border:1px solid #000;
-	margin: 0 auto;
-	div,ul,li{
-		display: inline-block;
+header{
+	padding: 0 10%;
+	width: 80%;
+	height: 5rem;
+	line-height: 5rem;
+	text-align: center;
+	background-color: #000;
+	ul{
+		.flexbox();
+		li{
+			cursor: pointer;
+			.flex();
+			list-style: none;
+			display: inline-block;
+			color: #eee;
+			font-size: 2rem;
+		}
+		li:first-child{
+			.flex(2);
+			font-size: 2.5rem;
+			color:@color_green;
+		}
 	}
 }
-.index_guide_logo{
-	width: 12rem;
-	vertical-align: top;
+
+footer{
+	width: 100%;
+	position: fixed;
+	bottom: 0;
+	color: #eee;
+	background-color: #000;
+	height: 3rem;
+	text-align: center;
+	line-height: 3rem;
+}
+
+.index_container{
+	margin: 0 auto;
+	.border();
+	width: 80%;
+	min-width: 64rem;
+}
+
+// 轮播图样式
+.index_container_turn{
+	height: 20rem;
+	padding-top: 3rem;
+	margin-left:calc(~"40% - 20rem");
+	margin-right: calc(~"40% - 21rem");
+	div{
+		display: inline-block;
+		vertical-align: top;
+	}
+
+	// 温度计显示进度
+	.index_container_turn_thermograph{
+		width: 4rem;
+		height: 15rem;
+		background-color: @color_gray;
+		border-radius: 1.5rem;
+		position: relative;
+		.index_container_turn_grayround{
+			width: 6rem;
+			height: 6rem;
+			border-radius: 3rem;
+			background-color: @color_gray;
+			position: absolute;
+			top:12rem;
+			left: -1rem;
+		}
+		.index_container_turn_greenrect{
+			width: 2rem;
+			height: 13rem;
+			background-color: @color_green; 
+			position: absolute;
+			top:1.5rem;
+			border-radius: 1.5rem;
+			left:1rem;
+		}
+		.index_container_turn_greenround{
+			width: 4rem;
+			height: 4rem;
+			border-radius: 2rem;
+			background-color: @color_green;
+			position: absolute;
+			top:13rem;
+			left: 0rem;
+		}
+	}
+
+	//轮播样式
+	.index_container_turn_picture{
+		width: 44rem;
+		height: 20rem;
+		margin-left: 5rem;
+		overflow: hidden;
+		ul{
+			width: 400%;
+			height: 100%;
+			display: inline-block;
+			font-size: 0;
+			li{
+				width: 25%;
+				display: inline-block;
+				img{
+					width: 100%;
+				}
+			}
+		}
+
+	}
+}
+
+//热区统一样式
+.index_container_hot{
+	width: 100%;
+	margin:0 auto;
+	height: 30rem;
+	margin-top: 3rem;
+	position: relative;
+	.border();
+}
+// 热区分割线
+.index_container_line{
+	.line();
+	position: relative;
+}
+.index_container_line:before{
+	content: '';
+	position: absolute;
+	left: -1rem;
+	top:-0.8rem;
+	width: 2rem;
+	height: 2rem;
+	border-radius: 1rem;
+	background-color: @color_gray;
+}
+.index_container_picwrap{
+	width: 30%;
+	margin-left: 3%;
+	margin-top: 2rem;
+	height: 25rem;
+	//.border();
+	display: inline-block;
+	box-shadow: 5px 2px 6px @color_gray;
+}
+.index_container_pic{
+	width: 100%;
+	height: 20rem;
+	overflow: hidden;
+	background-color: @color_gray;
 	img{
 		width: 100%;
 	}
 }
-.index_guide_rect{
-	width: 10rem;
-	height: 3rem;
-	background-color: @color_pink;
-	margin-top: 5rem;
-	border-radius: 1rem;
-	color:#fff;
-	text-align: center;
-	line-height: 3rem;
-	font-size: 1.6rem;
-	position: relative;
-	vertical-align: bottom;
-}
-.index_guide_box{
-	margin-left: 20%;
-}
-.index_guide_box:after{
-	content: 'PenMan';
-	position: absolute;
-	font-size: 4rem;
-	font-weight: bolder;
-	top:-100%;
-	left: -3rem;
-}
-.index_guide_compete{
-	margin-left: 2rem;
-}
-.index_guide_home{
-	width: 5rem;
+// 热区文字描述
+.index_container_word{
+	width: 100%;
 	height: 5rem;
-	margin-top: -2.5rem;
+	background-color: #fff;
 }
-.index_guide_home:after{
-	content: '';
-	position: relative;
-	top:-150%;
-	width: 0;
-	height: 0;
-	border-left: 2.5rem solid transparent;
-    border-right: 2.5rem solid transparent;
-    border-bottom: 3rem solid @color_pink;
-}
-.index_picture_list{
-	margin: 0 auto;
-	border:1px solid #fff;
-	padding-left: 3rem;
-}
-.index_picture_wrap{
-	cursor: pointer;
-	width: 20rem;
-	margin-left: 3rem;
-	margin-bottom: 1.5rem;
+.index_container_word>div{
 	display: inline-block;
-	position: relative;
 	vertical-align: top;
-	.index_picture_style{
+}
+.index_container_author{
+	width: 3rem;
+	height: 3rem;
+	padding: 1rem;
+	border-radius: 1.5rem;
+	img{
 		width: 100%;
-		z-index: 20;
-		border:0.5rem solid #ccc;
-		img{
-			width: 100%;
-		}
 	}
-	.index_picture_padding{
-		width: 20rem;
-		height: 1.5rem;
-		background-color: transparent;
+}
+.index_container_describe{
+	height: 90%;
+	padding-top: 3%;
+	div{
+		height: 40%;
+		padding: 5%;
 	}
+}
+.index_container_hotthree{
+	padding-bottom: 5rem;
 }
