--- a/public/less/comeon.less
+++ b/public/less/comeon.less
@@ -4,7 +4,7 @@
 @color_pink:#F3C9DD;
 @color_pink_deep:#f47fb5;
 @color_gray:#D8D8D8;
-.border(@b:1px){
+.border(@b:0px){
 	border:@b solid #979797; 
 }
 
@@ -47,6 +47,16 @@ header{
 	}
 }
 
+@-webkit-keyframes hat {
+  0% {
+    -webkit-transform: scale(3);
+    transform: scale(3);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
 .comeon_hat{
 	width: 10rem;
 	height: 10rem;
@@ -54,6 +64,10 @@ header{
 	margin: 0 auto;
 	position: relative;
 	margin-top: 1rem;
+	//transform:scale(3);
+	z-index: 15;
+	-webkit-animation: hat 3s 1 0s forwards;
+  	animation: hat 3s 1 0s forwards;
 }
 
 .comeon_hat_roundup{
@@ -104,7 +118,60 @@ header{
 	z-index: 8;
 }
 
+.comeon_glass{
+	width: 8rem;
+	height: 4rem;
+	.border();
+	position: absolute;
+	z-index: 11;
+	left:calc(~'50% - 4rem');
+	.comeon_glass_left{
+		width: 3.5rem;
+		height: 2.5rem;
+		background-color: #000;
+		position: absolute;
+		border-radius: 1rem;
+	}
+	.comeon_glass_left:before,
+	.comeon_glass_right:before{
+		content: '';
+		width: 3rem;
+		height: 0.5rem;
+		position: absolute;
+		top:0.5rem;
+		background-color: #000;
+		-webkit-transform:rotate(15deg);
+		transform:rotate(15deg);
+	}
+	.comeon_glass_left:before{
+		left: -3rem;
+	}
+	.comeon_glass_right:before{
+		right: -3rem;
+		-webkit-transform:rotate(-15deg);
+		transform:rotate(-15deg);
+	}
+	.comeon_glass_right{
+		width: 3.5rem;
+		height: 2.5rem;
+		background-color: #000;
+		position: absolute;
+		border-radius: 1rem;
+		right: 0;
+	}
+	.comeon_glass_midrect{
+		width: 3rem;
+		height: 0.5rem;
+		position: absolute;
+		left: 3.5rem;
+		top:1rem;
+		background-color: #000;
+	}
+}
+
 .comeon_note{
+	z-index: 5;
+	position: relative;
 	width: 35rem;
 	height: 25rem;
 	border-radius: 3rem;
@@ -112,4 +179,41 @@ header{
 	background-color: @color_gray;
 	margin: 0 auto;
 	margin-top: 1rem;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	padding: 2rem;
+	font-size: 1.6rem;
+	input,textarea{
+		width: 40%;
+		height: 2rem;
+		border:0px solid #726F6F;
+		border-radius: 1rem;
+		padding: 0 1rem;
+		word-wrap:break-word;
+		background-color: #fff;
+	}
+	.comeon_note_describeinput{
+		height: 6rem;
+	}
+	.comeon_note_submit{
+		width: 5rem;
+		height: 5rem;
+		background-color: #726F6F;
+		color:@color_gray;
+		text-align: center;
+		line-height: 5rem;
+		position: absolute;
+		border-radius: 2.5rem;
+		font-size:2rem;
+		border:0px solid #111;
+		left: 47%;
+	}
+	.comeon_pic_show{
+		width: 40%;
+		height: 16rem;
+		border:2px dotted #726F6F;
+		right: 2rem;
+		position: absolute;
+		top:2rem;
+	}
 }
