--- a/public/less/temp.less
+++ b/public/less/temp.less
@@ -104,7 +104,7 @@ footer{
 			padding-bottom: 0.5rem;
 			position: absolute;
 			//top:0.8rem;
-			bottom: 0rem;
+			bottom: 1rem;
 			border-radius: 1.5rem;
 			left:1rem;
 			font-size: 3rem;
@@ -112,8 +112,11 @@ footer{
     		z-index: 9;
     		li{
     			font-size: 0;
-    			height: 3rem;
+    			height: 4rem;
     			background-color: @color_green; 
+    		}
+    		li:nth-child(1){
+    			height: 0;
     		}
 		}
 		.index_container_turn_greenround{
