--- a/public/less/comeon.less
+++ b/public/less/comeon.less
@@ -12,11 +12,11 @@ html,body{
 	width: 100%;
 	height: 100%;
 	font-size:10px;
+	background-color: @color_green;
 }
 .container{
 	width: 100%;
 	height: 100%;
-	background-color: @color_green;
 }
 
 header{
@@ -57,6 +57,8 @@ header{
     transform: scale(1);
   }
 }
+
+// css for hat
 .comeon_hat{
 	width: 10rem;
 	height: 10rem;
@@ -118,6 +120,7 @@ header{
 	z-index: 8;
 }
 
+// css for black glass
 .comeon_glass{
 	width: 8rem;
 	height: 4rem;
@@ -207,6 +210,7 @@ header{
 		font-size:2rem;
 		border:0px solid #111;
 		left: 47%;
+		bottom: 0.5rem;
 	}
 	.comeon_pic_show{
 		width: 40%;
