link to mongodb

--- a/public/less/index.less
+++ b/public/less/index.less
@@ -32,8 +32,11 @@ footer{
 	background-color: #000;
 	height: 3rem;
 	text-align: center;
-	line-height: 3rem;
+	line-height: 1.5rem;
 	z-index: 99;
+	a{
+		color: #eee !important;
+	}
 	//display: none;
 }
 
