--- a/public/less/login.less
+++ b/public/less/login.less
@@ -1,7 +1,7 @@
 @color_green:#15adbc;
 @color_pink:#F3C9DD;
 @color_pink_deep:#f47fb5;
-
+@color_gray:#D8D8D8;
 html,body{
 	width: 100%;
 	height: 100%;
@@ -50,13 +50,13 @@ css for zhengjian
 }
 .login_allowloagin{
 	position: absolute;
-	top:10%;
+	top:13%;
 	left: 10%;
 	width: 25rem;
 	height: 15rem;
 	-webkit-transform: rotate(-15deg);
     transform: rotate(-15deg);
-	border: 1rem solid @color_pink;
+	border: 1rem solid @color_gray;
 	border-radius: 1rem;
 	background-color: #fff;
 	z-index: 9;
@@ -92,7 +92,7 @@ css for zhengjian
 	top:-3rem;
 	border-right: 1.5rem solid transparent;
 	border-left:1.5rem solid transparent;
-	border-bottom: 2rem solid @color_pink;
+	border-bottom: 2rem solid @color_gray;
 }
 .login_allowlogin_rectangle{
 	position: absolute;
@@ -100,14 +100,14 @@ css for zhengjian
 	top:1rem;
 	width: 9rem;
 	height: 1.5rem;
-	background-color: @color_pink;
+	background-color: @color_gray;
 	border-radius: 0.5rem;
 }
 .login_allowlogin_roundleft{
 	width: 2rem;
 	height: 2rem;
 	border-radius: 1rem;
-	background-color: @color_pink;
+	background-color: @color_gray;
 	position: absolute;
 	left: 10%;
 	top:1rem;
@@ -116,7 +116,7 @@ css for zhengjian
 	width: 2rem;
 	height: 2rem;
 	border-radius: 1rem;
-	background-color: @color_pink;
+	background-color: @color_gray;
 	position: absolute;
 	right: 10%;
 	top:1rem;
@@ -128,7 +128,7 @@ css for login form
 .login_writelogin{
 	width: 35rem;
 	height: 30rem;
-	background-color: @color_pink;
+	background-color: @color_gray;
 	border-radius: 2rem;
 	position: absolute;
 	left: 50%;
@@ -220,7 +220,7 @@ css for sorrow
 	width: 10%;
 	height: 20%;
 	position: absolute;
-	top: 40%;
+	top: 45%;
 	left: 35%;
 	img{
 		width: 100%;
