--- a/public/css/head.css
+++ b/public/css/head.css
@@ -1,1 +1,86 @@
-header{padding:0 10%;width:80%;height:5rem;line-height:5rem;text-align:center;background-color:#000}header ul{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex}header ul li{cursor:pointer;-webkit-box-flex:1;-webkit-flex:1;-ms-flex:1;flex:1;width:100%;list-style:none;display:inline-block;font-size:2rem}header ul li a{color:#eee!important}header ul li:first-child{-webkit-box-flex:2;-webkit-flex:2;-ms-flex:2;flex:2;width:100%;font-size:2.5rem}header ul li:first-child a{color:#15adbc!important}header ul li:hover a{color:#15adbc!important}
+@media screen and (min-width: 641px) {
+  html {
+    font-size: 10px;
+  }
+  header {
+    padding: 0 10%;
+    width: 80%;
+    height: 5rem;
+    line-height: 5rem;
+    text-align: center;
+    background-color: #000;
+  }
+  header ul {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  header ul li {
+    cursor: pointer;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    width: 100%;
+    list-style: none;
+    display: inline-block;
+    font-size: 2rem;
+  }
+  header ul li a {
+    color: #eee !important;
+  }
+  header ul li:first-child {
+    -webkit-box-flex: 2;
+    -webkit-flex: 2;
+    -ms-flex: 2;
+    flex: 2;
+    width: 100%;
+    font-size: 2.5rem;
+  }
+  header ul li:first-child a {
+    color: #15adbc !important;
+  }
+  header ul li:hover a {
+    color: #15adbc !important;
+  }
+}
+@media screen and (max-width: 640px) {
+  html {
+    font-size: 8px;
+  }
+  header {
+    padding: 0 10%;
+    width: 80%;
+    height: 20rem;
+    line-height: 5rem;
+    text-align: center;
+    background-color: #000;
+  }
+  header ul {
+    width: 100%;
+  }
+  header ul li {
+    cursor: pointer;
+    width: 100%;
+    list-style: none;
+    font-size: 2rem;
+  }
+  header ul li a {
+    color: #eee !important;
+  }
+  header ul li:first-child {
+    -webkit-box-flex: 2;
+    -webkit-flex: 2;
+    -ms-flex: 2;
+    flex: 2;
+    width: 100%;
+    font-size: 2.5rem;
+  }
+  header ul li:first-child a {
+    color: #15adbc !important;
+  }
+  header ul li:hover a {
+    color: #15adbc !important;
+  }
+}
