--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,7 +2,300 @@ html,
 body {
   width: 100%;
   height: 100%;
-  font-size: 10px;
+}
+/*PC css*/
+@media screen and (min-width: 641px) {
+  html {
+    font-size: 10px;
+  }
+  .index_container {
+    margin: 0 auto;
+    border: 0px solid #000000;
+    width: 80%;
+    min-width: 64rem;
+  }
+  .index_container_turn {
+    height: 20rem;
+    padding-top: 3rem;
+    margin-left: calc(40% - 20rem);
+    margin-right: calc(40% - 21rem);
+  }
+  .index_container_turn div {
+    display: inline-block;
+    vertical-align: top;
+  }
+  .index_container_turn .index_container_turn_thermograph {
+    width: 4rem;
+    height: 15rem;
+    background-color: #d8d8d8;
+    border-radius: 1.5rem;
+    position: relative;
+  }
+  .index_container_turn .index_container_turn_thermograph .index_container_turn_grayround {
+    width: 6rem;
+    height: 6rem;
+    border-radius: 3rem;
+    background-color: #d8d8d8;
+    position: absolute;
+    top: 12rem;
+    left: -1rem;
+  }
+  .index_container_turn .index_container_turn_thermograph .index_container_turn_greenrect {
+    width: 2rem;
+    padding-bottom: 0.5rem;
+    position: absolute;
+    bottom: 1rem;
+    border-radius: 1.5rem;
+    left: 1rem;
+    font-size: 3rem;
+    padding-top: 1rem;
+    z-index: 9;
+  }
+  .index_container_turn .index_container_turn_thermograph .index_container_turn_greenrect li {
+    font-size: 0;
+    height: 4rem;
+    background-color: #15adbc;
+  }
+  .index_container_turn .index_container_turn_thermograph .index_container_turn_greenrect li:nth-child(1) {
+    height: 0;
+  }
+  .index_container_turn .index_container_turn_thermograph .index_container_turn_greenround {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 2rem;
+    background-color: #15adbc;
+    position: absolute;
+    top: 13rem;
+    left: 0rem;
+    z-index: 8;
+  }
+  .index_container_turn .index_container_turn_picture {
+    width: 44rem;
+    height: 20rem;
+    margin-left: 5rem;
+    overflow: hidden;
+  }
+  .index_container_turn .index_container_turn_picture ul {
+    width: 400%;
+    height: 100%;
+    display: inline-block;
+    font-size: 0;
+  }
+  .index_container_turn .index_container_turn_picture ul li {
+    width: 25%;
+    display: inline-block;
+  }
+  .index_container_turn .index_container_turn_picture ul li img {
+    width: 100%;
+  }
+  .index_container_hot {
+    width: 100%;
+    margin: 0 auto;
+    height: 30rem;
+    margin-top: 3rem;
+    position: relative;
+    border: 0px solid #000000;
+  }
+  .index_container_line {
+    border-collapse: collapse;
+    background-color: #d8d8d8;
+    width: 100%;
+    height: 0.4rem;
+    position: relative;
+  }
+  .index_container_line:before {
+    content: '';
+    position: absolute;
+    left: -1rem;
+    top: -0.8rem;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 1rem;
+    background-color: #d8d8d8;
+  }
+  .index_container_hottwo_r1,
+  .index_container_hotthree_r1,
+  .index_container_hotthree_r2 {
+    position: absolute;
+    left: 1rem;
+    top: -0.8rem;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 1rem;
+    background-color: #d8d8d8;
+  }
+  .index_container_hotthree_r1 {
+    left: 3rem;
+  }
+  .index_container_picwrap {
+    width: 30%;
+    margin-left: 3%;
+    margin-top: 2rem;
+    height: 25rem;
+    display: inline-block;
+    box-shadow: 5px 2px 6px #d8d8d8;
+  }
+  .index_container_pic {
+    width: 100%;
+    height: 20rem;
+    overflow: hidden;
+    background-color: #d8d8d8;
+  }
+  .index_container_pic img {
+    width: 100%;
+  }
+  .index_container_word {
+    width: 100%;
+    height: 5rem;
+    background-color: #fff;
+  }
+  .index_container_word > div {
+    display: inline-block;
+    vertical-align: top;
+  }
+  .index_container_author {
+    width: 3rem;
+    height: 3rem;
+    padding: 1rem;
+    border-radius: 1.5rem;
+  }
+  .index_container_author img {
+    width: 100%;
+  }
+  .index_container_describe {
+    height: 90%;
+    padding-top: 3%;
+  }
+  .index_container_describe div {
+    height: 40%;
+    padding: 5%;
+  }
+  .index_container_hotthree {
+    padding-bottom: 5rem;
+  }
+}
+/*mobile css*/
+@media screen and (max-width: 640px) {
+  html {
+    font-size: 8px;
+  }
+  .index_container {
+    margin: 0 auto;
+    border: 0px solid #000000;
+    width: 100%;
+    min-width: 320px;
+    max-width: 640px;
+  }
+  .index_container_turn {
+    height: 14rem;
+  }
+  .index_container_turn div {
+    display: inline-block;
+    vertical-align: top;
+  }
+  .index_container_turn .index_container_turn_thermograph {
+    display: none;
+  }
+  .index_container_turn .index_container_turn_picture {
+    width: 100%;
+    height: 13rem;
+    overflow: hidden;
+  }
+  .index_container_turn .index_container_turn_picture ul {
+    width: 400%;
+    height: 100%;
+    display: inline-block;
+    font-size: 0;
+  }
+  .index_container_turn .index_container_turn_picture ul li {
+    width: 25%;
+    display: inline-block;
+  }
+  .index_container_turn .index_container_turn_picture ul li img {
+    width: 100%;
+  }
+  .index_container_hot {
+    width: 100%;
+    margin: 0 auto;
+    height: 86rem;
+    position: relative;
+    border: 0px solid #000000;
+  }
+  .index_container_line {
+    border-collapse: collapse;
+    background-color: #d8d8d8;
+    width: 100%;
+    height: 0.4rem;
+    position: relative;
+  }
+  .index_container_line:before {
+    content: '';
+    position: absolute;
+    left: -1rem;
+    top: -0.8rem;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 1rem;
+    background-color: #d8d8d8;
+  }
+  .index_container_hottwo_r1,
+  .index_container_hotthree_r1,
+  .index_container_hotthree_r2 {
+    position: absolute;
+    left: 1rem;
+    top: -0.8rem;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 1rem;
+    background-color: #d8d8d8;
+  }
+  .index_container_hotthree_r1 {
+    left: 3rem;
+  }
+  .index_container_picwrap {
+    width: 80%;
+    margin: 2.5rem auto;
+    height: 25rem;
+    box-shadow: 5px 2px 6px #d8d8d8;
+  }
+  .index_container_pic {
+    width: 100%;
+    height: 20rem;
+    overflow: hidden;
+    background-color: #d8d8d8;
+  }
+  .index_container_pic img {
+    width: 100%;
+  }
+  .index_container_word {
+    width: 100%;
+    height: 5rem;
+    background-color: #fff;
+  }
+  .index_container_word > div {
+    display: inline-block;
+    vertical-align: top;
+  }
+  .index_container_author {
+    width: 3rem;
+    height: 3rem;
+    padding: 1rem;
+    border-radius: 1.5rem;
+  }
+  .index_container_author img {
+    width: 100%;
+  }
+  .index_container_describe {
+    height: 90%;
+    padding-top: 3%;
+  }
+  .index_container_describe div {
+    height: 40%;
+    padding: 5%;
+  }
+  .index_container_hotthree {
+    padding-bottom: 5rem;
+  }
 }
 .container {
   width: 100%;
@@ -21,171 +314,6 @@ footer {
 }
 footer a {
   color: #eee !important;
-}
-.index_container {
-  margin: 0 auto;
-  border: 0px solid #000000;
-  width: 80%;
-  min-width: 64rem;
-}
-.index_container_turn {
-  height: 20rem;
-  padding-top: 3rem;
-  margin-left: calc(40% - 20rem);
-  margin-right: calc(40% - 21rem);
-}
-.index_container_turn div {
-  display: inline-block;
-  vertical-align: top;
-}
-.index_container_turn .index_container_turn_thermograph {
-  width: 4rem;
-  height: 15rem;
-  background-color: #d8d8d8;
-  border-radius: 1.5rem;
-  position: relative;
-}
-.index_container_turn .index_container_turn_thermograph .index_container_turn_grayround {
-  width: 6rem;
-  height: 6rem;
-  border-radius: 3rem;
-  background-color: #d8d8d8;
-  position: absolute;
-  top: 12rem;
-  left: -1rem;
-}
-.index_container_turn .index_container_turn_thermograph .index_container_turn_greenrect {
-  width: 2rem;
-  padding-bottom: 0.5rem;
-  position: absolute;
-  bottom: 1rem;
-  border-radius: 1.5rem;
-  left: 1rem;
-  font-size: 3rem;
-  padding-top: 1rem;
-  z-index: 9;
-}
-.index_container_turn .index_container_turn_thermograph .index_container_turn_greenrect li {
-  font-size: 0;
-  height: 4rem;
-  background-color: #15adbc;
-}
-.index_container_turn .index_container_turn_thermograph .index_container_turn_greenrect li:nth-child(1) {
-  height: 0;
-}
-.index_container_turn .index_container_turn_thermograph .index_container_turn_greenround {
-  width: 4rem;
-  height: 4rem;
-  border-radius: 2rem;
-  background-color: #15adbc;
-  position: absolute;
-  top: 13rem;
-  left: 0rem;
-  z-index: 8;
-}
-.index_container_turn .index_container_turn_picture {
-  width: 44rem;
-  height: 20rem;
-  margin-left: 5rem;
-  overflow: hidden;
-}
-.index_container_turn .index_container_turn_picture ul {
-  width: 400%;
-  height: 100%;
-  display: inline-block;
-  font-size: 0;
-}
-.index_container_turn .index_container_turn_picture ul li {
-  width: 25%;
-  display: inline-block;
-}
-.index_container_turn .index_container_turn_picture ul li img {
-  width: 100%;
-}
-.index_container_hot {
-  width: 100%;
-  margin: 0 auto;
-  height: 30rem;
-  margin-top: 3rem;
-  position: relative;
-  border: 0px solid #000000;
-}
-.index_container_line {
-  border-collapse: collapse;
-  background-color: #d8d8d8;
-  width: 100%;
-  height: 0.4rem;
-  position: relative;
-}
-.index_container_line:before {
-  content: '';
-  position: absolute;
-  left: -1rem;
-  top: -0.8rem;
-  width: 2rem;
-  height: 2rem;
-  border-radius: 1rem;
-  background-color: #d8d8d8;
-}
-.index_container_hottwo_r1,
-.index_container_hotthree_r1,
-.index_container_hotthree_r2 {
-  position: absolute;
-  left: 1rem;
-  top: -0.8rem;
-  width: 2rem;
-  height: 2rem;
-  border-radius: 1rem;
-  background-color: #d8d8d8;
-}
-.index_container_hotthree_r1 {
-  left: 3rem;
-}
-.index_container_picwrap {
-  width: 30%;
-  margin-left: 3%;
-  margin-top: 2rem;
-  height: 25rem;
-  display: inline-block;
-  box-shadow: 5px 2px 6px #d8d8d8;
-}
-.index_container_pic {
-  width: 100%;
-  height: 20rem;
-  overflow: hidden;
-  background-color: #d8d8d8;
-}
-.index_container_pic img {
-  width: 100%;
-}
-.index_container_word {
-  width: 100%;
-  height: 5rem;
-  background-color: #fff;
-}
-.index_container_word > div {
-  display: inline-block;
-  vertical-align: top;
-}
-.index_container_author {
-  width: 3rem;
-  height: 3rem;
-  padding: 1rem;
-  border-radius: 1.5rem;
-}
-.index_container_author img {
-  width: 100%;
-}
-.index_container_describe {
-  height: 90%;
-  padding-top: 3%;
-}
-.index_container_describe div {
-  height: 40%;
-  padding: 5%;
-}
-.index_container_hotthree {
-  padding-bottom: 5rem;
 }
 .index_music {
   width: 4rem;
