--- a/public/css/login.css
+++ b/public/css/login.css
@@ -2,12 +2,14 @@ html,
 body {
   width: 100%;
   height: 100%;
+  background-color: #15adbc;
 }
 .container {
   width: 100%;
   height: 100%;
-  background-color: #15adbc;
+  position: relative;
 }
+/*PC css*/
 @media screen and (min-width: 641px) {
   html {
     font-size: 10px;
@@ -158,22 +160,17 @@ body {
     height: 100%;
   }
 }
+/*mobile css*/
 @media screen and (max-width: 640px) {
   html {
     font-size: 8px;
   }
-  .login_allowloagin.animate {
-    -webkit-animation: shake 1s 3 3s forwards;
-    animation: shake 1s 3 3s forwards;
-  }
   .login_allowloagin {
     position: absolute;
-    top: 13%;
-    left: 10%;
+    left: calc(50% - 13.5rem);
+    margin: 0 auto;
     width: 25rem;
     height: 15rem;
-    -webkit-transform: rotate(-15deg);
-    transform: rotate(-15deg);
     border: 1rem solid #d8d8d8;
     border-radius: 1rem;
     background-color: #fff;
@@ -243,17 +240,17 @@ body {
 	css for login form
 	 */
   .login_writelogin {
-    width: 35rem;
+    width: 80%;
+    left: 10%;
     height: 30rem;
     background-color: #d8d8d8;
     border-radius: 2rem;
     position: absolute;
-    left: 50%;
-    top: 25%;
+    top: 18rem;
     z-index: 9;
   }
   .login_writelogin .login_inputstyle {
-    width: 28rem;
+    width: 80%;
     padding: 0 1rem;
     height: 4rem;
     border: 0px solid #fff;
@@ -262,7 +259,7 @@ body {
     font-style: bold;
     color: #000;
     position: absolute;
-    left: 2.5rem;
+    left: 5%;
   }
   .login_writelogin .login_writelogin_name {
     top: 3rem;
@@ -290,22 +287,8 @@ body {
     left: calc(50% - 2.5rem);
     bottom: 5%;
   }
-  .login_sorrow.animate {
-    -webkit-animation: sorrow 3s 1 0s forwards;
-    animation: sorrow 3s 1 0s forwards;
-  }
   .login_sorrow {
-    -webkit-transform: scale(1) rotate(-15deg);
-    transform: scale(1) rotate(-15deg);
-    width: 10%;
-    height: 20%;
-    position: absolute;
-    top: 45%;
-    left: 35%;
-  }
-  .login_sorrow img {
-    width: 100%;
-    height: 100%;
+    display: none;
   }
 }
 /*
