--- a/public/less/login.less
+++ b/public/less/login.less
@@ -5,13 +5,15 @@
 html,body{
 	width: 100%;
 	height: 100%;
+	background-color: @color_green;
 }
 .container{
 	width: 100%;
-	height: 100%;
-	background-color: @color_green;
+	height: 100%;	
+	position: relative;
 }
 
+/*PC css*/
 @media screen and(min-width:641px){
 	html{
 		font-size:10px;
@@ -166,22 +168,17 @@ html,body{
 	}
 }
 
+/*mobile css*/
 @media screen and(max-width:640px){
 	html{
 		font-size: 8px;
 	}
-	.login_allowloagin.animate{
-	-webkit-animation: shake 1s 3 3s forwards;
-  	animation: shake 1s 3 3s forwards;
-}
 	.login_allowloagin{
 		position: absolute;
-		top:13%;
-		left: 10%;
+		left: calc(~"50% - 13.5rem");
+		margin:0 auto;
 		width: 25rem;
 		height: 15rem;
-		-webkit-transform: rotate(-15deg);
-	    transform: rotate(-15deg);
 		border: 1rem solid @color_gray;
 		border-radius: 1rem;
 		background-color: #fff;
@@ -252,16 +249,16 @@ html,body{
 	css for login form
 	 */
 	.login_writelogin{
-		width: 35rem;
+		width: 80%;
+		left: 10%;
 		height: 30rem;
 		background-color: @color_gray;
 		border-radius: 2rem;
 		position: absolute;
-		left: 50%;
-		top:25%;
+		top:18rem;
 		z-index: 9;
 		.login_inputstyle{
-			width: 28rem;
+			width: 80%;
 			padding: 0 1rem;
 			height: 4rem;
 			border: 0px solid #fff;
@@ -270,7 +267,7 @@ html,body{
 			font-style: bold;
 			color: #000; 
 			position: absolute;
-			left: 2.5rem;	
+			left: 5%;	
 		}
 		.login_writelogin_name{		
 			top:3rem;
@@ -299,23 +296,8 @@ html,body{
 			bottom: 5%;
 		}
 	}
-
-	.login_sorrow.animate{
-		-webkit-animation: sorrow 3s 1 0s forwards;
-	  	animation: sorrow 3s 1 0s forwards;
-	}
 	.login_sorrow{
-		-webkit-transform: scale(1) rotate(-15deg);
-	    transform: scale(1) rotate(-15deg);
-		width: 10%;
-		height: 20%;
-		position: absolute;
-		top: 45%;
-		left: 35%;
-		img{
-			width: 100%;
-			height: 100%;
-		}
+		display: none;
 	}
 
 }
