--- a/public/less/head.less
+++ b/public/less/head.less
@@ -4,7 +4,7 @@
 @color_pink_deep:#f47fb5;
 @color_gray:#D8D8D8;
 
-@media screen and (min-width:641px) {
+@media screen and (min-width:765px) {
 html{
 	font-size: 10px;
 }
@@ -43,7 +43,7 @@ header{
 }
 }
 
-@media screen and (max-width:640px){
+@media screen and (min-width:320px) and (max-width:765px){
 html{
 	font-size: 8px;
 }
