--- a/public/css/comeon.css
+++ b/public/css/comeon.css
@@ -4,7 +4,7 @@ body {
   height: 100%;
   background-color: #15adbc;
 }
-@media screen and (min-width: 641px) {
+@media screen and (min-width: 765px) {
   html {
     font-size: 10px;
   }
@@ -63,7 +63,7 @@ body {
     width: 100%;
   }
 }
-@media screen and (max-width: 640px) {
+@media screen and (min-width: 320px) and (max-width: 765px) {
   html {
     font-size: 8px;
   }
