--- a/public/css/head.css
+++ b/public/css/head.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 641px) {
+@media screen and (min-width: 765px) {
   html {
     font-size: 10px;
   }
@@ -45,7 +45,7 @@
     color: #15adbc !important;
   }
 }
-@media screen and (max-width: 640px) {
+@media screen and (min-width: 320px) and (max-width: 765px) {
   html {
     font-size: 8px;
   }
