--- a/public/css/login.css
+++ b/public/css/login.css
@@ -10,7 +10,7 @@ body {
   position: relative;
 }
 /*PC css*/
-@media screen and (min-width: 641px) {
+@media screen and (min-width: 765px) {
   html {
     font-size: 10px;
   }
@@ -161,7 +161,7 @@ body {
   }
 }
 /*mobile css*/
-@media screen and (max-width: 640px) {
+@media screen and (min-width: 320px) and (max-width: 765px) {
   html {
     font-size: 8px;
   }
