--- a/public/less/comeon.less
+++ b/public/less/comeon.less
@@ -14,7 +14,7 @@ html,body{
 	background-color: @color_green;
 }
 
-@media screen and (min-width:641px) {
+@media screen and (min-width:765px) {
 	html{
 		font-size:10px;
 	}
@@ -73,7 +73,7 @@ html,body{
 	}
 }
 
-@media screen and (max-width:640px){
+@media screen and (min-width:320px) and (max-width:765px){
 	html{
 		font-size: 8px;
 	}
