--- a/public/less/index.less
+++ b/public/less/index.less
@@ -20,7 +20,7 @@ html,body{
 }
 
 /*PC css*/
-@media screen and(min-width:641px){
+@media screen and(min-width:765px){
 	html{
 		font-size:10px;
 	}
@@ -206,7 +206,7 @@ html,body{
 }
 
 /*mobile css*/
-@media screen and(max-width:640px){
+@media screen and(min-width:320px) and (max-width:765px){
 	html{
 		font-size: 8px;
 	}
