--- a/public/less/login.less
+++ b/public/less/login.less
@@ -14,7 +14,7 @@ html,body{
 }
 
 /*PC css*/
-@media screen and(min-width:641px){
+@media screen and(min-width:765px){
 	html{
 		font-size:10px;
 	}
@@ -169,7 +169,7 @@ html,body{
 }
 
 /*mobile css*/
-@media screen and(max-width:640px){
+@media screen and(min-width:320px) and (max-width:765px){
 	html{
 		font-size: 8px;
 	}
