--- a/public/less/index.less
+++ b/public/less/index.less
@@ -363,15 +363,15 @@ footer{
 		li{
 			.flex(1);
 			img{
-				width: 40%;
+				width: 70%;
 			}
 		}
 		li:last-child{
 			position: relative;
 			img{
 				position: absolute;
-				bottom: 0px;
-				left: 140px;
+				bottom: 7%;
+				left: 15%;
 			}
 		}
 	}
