--- a/public/less/head.less
+++ b/public/less/head.less
@@ -50,10 +50,10 @@ header{
 			color: @color_pink_deep !important;
 		}
 	}
-	.index_log:before{
+	.index_log a:first-child:before{
 		content: '|';
 	    position: relative;
-	    left: 53px;
+	    left: 49px;
 	    color: #fff;
 	}
 }
