--- a/public/less/index.less
+++ b/public/less/index.less
@@ -193,6 +193,7 @@ html,body{
 		border-radius: 1.5rem;
 		img{
 			width: 100%;
+			max-height: 3rem;
 		}
 	}
 	.index_container_describe{
@@ -329,6 +330,7 @@ html,body{
 		border-radius: 1.5rem;
 		img{
 			width: 100%;
+			max-height: 3rem;
 		}
 	}
 	.index_container_describe{
