--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -15,6 +15,14 @@ body {
   .index_container_hot {
     height: auto !important;
   }
+  .theme_search {
+    width: 100%;
+    margin-top: 1.5rem;
+    height: 2rem;
+    border: 2px solid #d8d8d8;
+    border-radius: 1rem;
+    cursor: pointer;
+  }
 }
 /*mobile css*/
 @media screen and (min-width: 320px) and (max-width: 765px) {
