--- a/public/less/theme.less
+++ b/public/less/theme.less
@@ -31,6 +31,15 @@ html,body{
 	.index_container_hot{
 		height: auto !important;
 	}
+
+	.theme_search{
+		width: 100%;
+		margin-top: 1.5rem;
+		height: 2rem;
+		border: 2px solid @color_gray;
+		border-radius: 1rem;
+		cursor: pointer;
+	}
 }
 
 /*mobile css*/
