--- a/public/less/theme.less
+++ b/public/less/theme.less
@@ -31,14 +31,31 @@ html,body{
 	.index_container_hot{
 		height: auto !important;
 	}
+	.index_log{
+		display: inline-block;
+		line-height: 0 !important;
+		cursor: default !important;
+	}
 
 	.theme_search{
+		cursor: default !important;
 		width: 100%;
 		margin-top: 1.5rem;
 		height: 2rem;
 		border: 2px solid @color_gray;
 		border-radius: 1rem;
 		cursor: pointer;
+		position: relative;
+		padding-left: 1rem;
+	}
+	.theme_searchlogo{
+		width: 1.8%;
+	    position: absolute;
+	    left: 89%;
+	    top: 1.7rem;
+		img{
+			width: 100%;
+		}
 	}
 }
 
