--- a/public/less/home.less
+++ b/public/less/home.less
@@ -1,11 +1,3 @@
-.home_nowork{
-	text-align: center;
-}
-
-.home_no{
-	display: none;
-}
-
 @color_green:#15adbc;
 @color_pink:#F3C9DD;
 @color_pink_deep:#f47fb5;
@@ -26,6 +18,55 @@ html,body{
 	background-color: @color_green;
 }
 
+.home_nowork{
+	text-align: center;
+}
+
+.home_no{
+	display: none;
+}
+.home_anthorinfo{
+	.home_head{
+		width: 20%;
+		width: 10%;
+	    margin-left: 45%;
+	    padding-bottom: 3rem;
+	    display: inline-block;
+		img{
+			width: 100%;
+		}
+	}
+
+	.home_changehead{
+		display: inline-block;
+		width: 5rem;
+	    height: 2rem;
+	    line-height: 2rem;
+	    background-color: @color_gray;
+	    border-radius: 2rem;
+	    text-align: center;
+	    vertical-align: top;
+	    margin-left: 2rem;
+	    cursor: pointer;
+	}
+}
+.home_button{
+	width: 16rem;
+}
+.home_delete,.home_update{
+	display: inline-block;
+	width: 5rem;
+	height: 1rem;
+	background-color: @color_gray;
+	border-radius: 1rem;
+	cursor: pointer;
+}
+
+.home_update{
+	margin-left: 1rem;
+}
+
+
 /*PC css*/
 @media screen and(min-width:765px){
 	.index_container{
@@ -38,6 +79,12 @@ html,body{
 	//热区统一样式
 	.index_container_hot{
 		height: auto !important;
+	}
+	.index_container_word {
+		text-align: center !important;
+	}
+	.index_container_describe div{
+		padding: 2%;
 	}
 }
 
@@ -58,7 +105,14 @@ html,body{
 	.index_container_hot{
 		height: auto !important;
 	}
+	.index_container_word {
+		text-align: center !important;
+	}
+	.index_container_describe div{
+		padding: 2%;
+	}
 }
+
 
 
 
