--- a/public/less/index.less
+++ b/public/less/index.less
@@ -159,6 +159,7 @@ html,body{
 		left: 3rem;
 	}
 	.index_container_picwrap{
+		position: relative;
 		width: 30%;
 		margin-left: 3%;
 		margin-top: 2rem;
