--- a/public/less/home.less
+++ b/public/less/home.less
@@ -71,6 +71,7 @@ html,body{
     height: 15rem;
     position: absolute;
     background-color: #d8d8d8;
+    z-index: 99;
     opacity: 0.8;
     top: 10rem;
     right: -22rem;
@@ -130,6 +131,7 @@ html,body{
     position: absolute;
     left: -2rem;
     top: 9.5rem;
+    z-index: 99;
 }
 
 .home_updateshow_close{
@@ -182,6 +184,10 @@ html,body{
 	.index_container_describe div{
 		padding: 2%;
 	}
+}
+
+.disnone{
+	display: none;
 }
 
 
