--- a/public/less/index.less
+++ b/public/less/index.less
@@ -209,6 +209,8 @@ html,body{
 		}
 	}
 	.index_cover{
+		-webkit-transform: translateX(-200%);
+		transform: translateX(-200%);
 		width: 80%;
 		background-color: @color_gray;
 		opacity: 0.9;
