pas and indexcover

--- a/public/css/register.css
+++ b/public/css/register.css
@@ -9,7 +9,8 @@ body {
   height: 100%;
   position: relative;
 }
-input[type="text"] {
+input[type="text"],
+input[type="password"] {
   border: 1px solid #d8d8d8;
 }
 /*PC css*/
