--- a/public/less/register.less
+++ b/public/less/register.less
@@ -13,7 +13,7 @@ html,body{
 	position: relative;
 }
 
-input[type="text"]{
+input[type="text"],input[type="password"]{
 	border:1px solid @color_gray;
 }
 
