--- a/public/css/index.css
+++ b/public/css/index.css
@@ -139,6 +139,7 @@ body {
     box-shadow: 5px 2px 6px #d8d8d8;
   }
   .index_container_pic {
+    cursor: pointer;
     width: 100%;
     height: 20rem;
     overflow: hidden;
