--- a/public/less/index.less
+++ b/public/less/index.less
@@ -169,6 +169,7 @@ html,body{
 		box-shadow: 5px 2px 6px @color_gray;
 	}
 	.index_container_pic{
+		cursor: pointer;
 		width: 100%;
 		height: 20rem;
 		overflow: hidden;
