--- a/public/less/head.less
+++ b/public/less/head.less
@@ -41,8 +41,12 @@ header{
 		}
 		li:nth-child(5){
 			font-size: 1.5rem;
-			//vertical-align: bottom;
-			line-height: 6;
+			span{
+				white-space: nowrap;
+			}
+			div > span:last-child{
+				color:@color_gray;
+			}
 		}
 	}
 	.index_log:hover{
