--- a/public/less/register.less
+++ b/public/less/register.less
@@ -15,6 +15,7 @@ html,body{
 
 input[type="text"],input[type="password"]{
 	border:1px solid @color_gray;
+	//white-space: normal !important;
 }
 
 /*PC css*/
