index cover finish

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -217,6 +217,7 @@ body {
     line-height: 5rem;
   }
   .index_cover .index_close {
+    cursor: pointer;
     background-color: #000;
     opacity: 0.8;
     color: #d8d8d8;
