--- a/public/less/index.less
+++ b/public/less/index.less
@@ -247,6 +247,7 @@ html,body{
 		    line-height:5rem;
 		}
 		.index_close{
+			cursor: pointer;
 			background-color: #000;
 			opacity: 0.8;
 			color:@color_gray;
