--- a/public/css/home.css
+++ b/public/css/home.css
@@ -47,19 +47,13 @@ body {
 .home_update {
   margin-left: 1rem;
 }
-.home_updateshow_close{
-  display: none;
-}
 .home_updateshow {
-  display: block;
   width: 20rem;
   height: 15rem;
   position: absolute;
   background-color: #d8d8d8;
   z-index: 99;
   opacity: 0.8;
-  top: 10rem;
-  right: -22rem;
   text-align: center;
   border-radius: 1rem;
 }
@@ -135,6 +129,9 @@ body {
   .index_container_describe div {
     padding: 2%;
   }
+  .index_container_describe {
+    padding-top: 0%;
+  }
 }
 /*mobile css*/
 @media screen and (min-width: 320px) and (max-width: 765px) {
@@ -156,6 +153,9 @@ body {
   }
   .index_container_describe div {
     padding: 2%;
+  }
+  .index_container_describe {
+    padding-top: 0%;
   }
 }
 .disnone {
