--- a/public/less/home.less
+++ b/public/less/home.less
@@ -73,8 +73,6 @@ html,body{
     background-color: #d8d8d8;
     z-index: 99;
     opacity: 0.8;
-    top: 10rem;
-    right: -22rem;
     text-align: center;
     border-radius: 1rem;
     input,textarea{
@@ -159,6 +157,9 @@ html,body{
 	.index_container_describe div{
 		padding: 2%;
 	}
+	.index_container_describe{
+		padding-top: 0%;
+	}
 }
 
 /*mobile css*/
@@ -183,6 +184,9 @@ html,body{
 	}
 	.index_container_describe div{
 		padding: 2%;
+	}
+	.index_container_describe{
+		padding-top: 0%;
 	}
 }
 
