--- a/public/less/index.less
+++ b/public/less/index.less
@@ -22,10 +22,12 @@ html,body{
 /*PC css*/
 @media screen and(min-width:765px){
 	html{
-		font-size:10px;
+		font-size:12px;
 	}
 
 	.index_container{
+		overflow: hidden;
+    	position: relative;
 		margin: 0 auto;
 		.border();
 		width: 80%;
@@ -135,7 +137,7 @@ html,body{
 	.index_container_line:before{
 		content: '';
 		position: absolute;
-		left: -1rem;
+		left: rem;
 		top:-0.8rem;
 		width: 2rem;
 		height: 2rem;
@@ -148,7 +150,7 @@ html,body{
 	//.index_container_hotthree_r2
 	{
 		position: absolute;
-		left: 1rem;
+		left: 2rem;
 		top:-0.8rem;
 		width: 2rem;
 		height: 2rem;
@@ -156,7 +158,7 @@ html,body{
 		background-color: @color_gray;
 	}
 	.index_container_hot_r1{
-		left: 3rem;
+		left: 4rem;
 	}
 	.index_container_picwrap{
 		position: relative;
@@ -270,6 +272,8 @@ html,body{
 		font-size: 8px;
 	}
 	.index_container{
+		overflow: hidden;
+    	position: relative;
 		margin: 0 auto;
 		.border();
 		width: 100%;
