--- a/public/css/head.css
+++ b/public/css/head.css
@@ -76,7 +76,7 @@
   header {
     padding: 0 10%;
     width: 80%;
-    height: 20rem;
+    height: 25rem;
     line-height: 5rem;
     text-align: center;
     background-color: #000;
@@ -109,16 +109,14 @@
   }
   header ul li:nth-child(5) {
     font-size: 1.5rem;
-    line-height: 1.5rem;
-    position: absolute;
-    top: 2rem;
     right: 0;
-    width: 128px;
-    overflow: hidden;
     white-space: nowrap;
     color: #fff;
   }
   header .index_log:hover a:last-child {
     color: #f47fb5 !important;
+  }
+  header .index_log a:last-child {
+    margin-left: 10%;
   }
 }
