--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -56,4 +56,24 @@ body {
   .index_container_hot {
     height: auto !important;
   }
+  .theme_search {
+    cursor: default !important;
+    width: 100%;
+    margin-top: 1.5rem;
+    height: 2rem;
+    border: 2px solid #d8d8d8;
+    border-radius: 1rem;
+    cursor: pointer;
+    position: relative;
+    padding-left: 1rem;
+  }
+  .theme_searchlogo {
+    width: 1.8%;
+    position: absolute;
+    left: 89%;
+    top: 1.7rem;
+  }
+  .theme_searchlogo img {
+    width: 100%;
+  }
 }
