--- a/public/less/head.less
+++ b/public/less/head.less
@@ -76,7 +76,7 @@ html{
 header{
 	padding: 0 10%;
 	width: 80%;
-	height: 20rem;
+	height: 25rem;
 	line-height: 5rem;
 	text-align: center;
 	background-color: #000;
@@ -105,13 +105,7 @@ header{
 		}
 		li:nth-child(5){
 			font-size: 1.5rem;
-			//vertical-align: bottom;
-			line-height: 1.5rem;
-			position: absolute;
-			top: 2rem;
 			right: 0;
-			width: 128px;
-			overflow: hidden;
 			white-space:nowrap;
 			color:#fff;
 		}
@@ -120,6 +114,9 @@ header{
 		a:last-child{
 			color: @color_pink_deep !important;
 		}
+	}
+	.index_log a:last-child{
+		margin-left: 10%;
 	}
 }
 }
