--- a/public/less/theme.less
+++ b/public/less/theme.less
@@ -76,6 +76,27 @@ html,body{
 	.index_container_hot{
 		height: auto !important;
 	}
+
+	.theme_search{
+		cursor: default !important;
+		width: 100%;
+		margin-top: 1.5rem;
+		height: 2rem;
+		border: 2px solid @color_gray;
+		border-radius: 1rem;
+		cursor: pointer;
+		position: relative;
+		padding-left: 1rem;
+	}
+	.theme_searchlogo{
+		width: 1.8%;
+	    position: absolute;
+	    left: 89%;
+	    top: 1.7rem;
+		img{
+			width: 100%;
+		}
+	}
 }
 
 
