--- a/public/less/home.less
+++ b/public/less/home.less
@@ -67,7 +67,7 @@ html,body{
 }
 
 .home_updateshow{
-	width: 20rem;
+	width: 50%;
     height: 15rem;
     position: absolute;
     background-color: #d8d8d8;
@@ -75,6 +75,7 @@ html,body{
     opacity: 0.8;
     text-align: center;
     border-radius: 1rem;
+    left:25%;
     input,textarea{
 		width: 60%;
 		padding: 0 10%;
