--- a/public/less/index.less
+++ b/public/less/index.less
@@ -26,8 +26,8 @@ html,body{
 	}
 
 	.index_container{
-		overflow: hidden;
     	position: relative;
+    	overflow-x: hidden;
 		margin: 0 auto;
 		.border();
 		width: 80%;
