--- a/public/css/home.css
+++ b/public/css/home.css
@@ -48,7 +48,7 @@ body {
   margin-left: 1rem;
 }
 .home_updateshow {
-  width: 20rem;
+  width: 50%;
   height: 15rem;
   position: absolute;
   background-color: #d8d8d8;
@@ -56,6 +56,7 @@ body {
   opacity: 0.8;
   text-align: center;
   border-radius: 1rem;
+  left: 25%;
 }
 .home_updateshow input,
 .home_updateshow textarea {
