--- a/public/less/theme.less
+++ b/public/less/theme.less
@@ -35,6 +35,7 @@ html,body{
 		display: inline-block;
 		line-height: 0 !important;
 		cursor: default !important;
+		position: relative;
 	}
 
 	.theme_search{
@@ -49,10 +50,10 @@ html,body{
 		padding-left: 1rem;
 	}
 	.theme_searchlogo{
-		width: 1.8%;
+		width: 2rem;
 	    position: absolute;
-	    left: 89%;
-	    top: 1.7rem;
+	    left: 90%;
+	    top: 1.5rem;
 		img{
 			width: 100%;
 		}
@@ -89,10 +90,10 @@ html,body{
 		padding-left: 1rem;
 	}
 	.theme_searchlogo{
-		width: 1.8%;
+		width: 2rem;
 	    position: absolute;
-	    left: 89%;
-	    top: 1.7rem;
+	    top: 1.5rem;
+	    right: 0;
 		img{
 			width: 100%;
 		}
