--- a/public/less/home.less
+++ b/public/less/home.less
@@ -57,6 +57,7 @@ html,body{
 	display: inline-block;
 	width: 5rem;
 	height: 1rem;
+	line-height: 1rem;
 	background-color: @color_gray;
 	border-radius: 1rem;
 	cursor: pointer;
