--- a/public/css/home.css
+++ b/public/css/home.css
@@ -40,6 +40,7 @@ body {
   display: inline-block;
   width: 5rem;
   height: 1rem;
+  line-height: 1rem;
   background-color: #d8d8d8;
   border-radius: 1rem;
   cursor: pointer;
